@@ -11,6 +11,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -32,7 +34,7 @@ class DtoEntityFieldArchitectureTest {
     private List<Class<?>> dtoClasses() throws IOException, ClassNotFoundException {
         Path classesRoot = Path.of("target/classes");
         Path packageRoot = classesRoot.resolve("com/jamil/ahadith");
-        try (var paths = Files.walk(packageRoot)) {
+        try (Stream<Path> paths = Files.walk(packageRoot)) {
             return paths
                     .filter(path -> path.toString().endsWith("Dto.class"))
                     .map(classesRoot::relativize)
@@ -41,7 +43,7 @@ class DtoEntityFieldArchitectureTest {
                             .replace('/', '.')
                             .replaceAll("\\.class$", ""))
                     .map(this::loadClass)
-                    .toList();
+                    .collect(Collectors.toList());
         }
     }
 
@@ -57,8 +59,7 @@ class DtoEntityFieldArchitectureTest {
             Class<?> dtoClass,
             Type type,
             String fieldName,
-            List<String> violations
-    ) {
+            List<String> violations) {
         if (type instanceof Class<?> fieldClass) {
             if (fieldClass.isAnnotationPresent(Entity.class)) {
                 violations.add(dtoClass.getName() + "." + fieldName + " -> " + fieldClass.getName());
